# assert_type_match

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: args.rs  enums.rs  fields.rs  flags.rs  lib.rs  parse_bool.rs  structs.rs  utils.rs  variants.rs  wrap.rs
tests/: assert.rs
tests/assert/args/: check_name.rs  empty_field_args.rs  empty_variant_args.rs  invalid_arg.rs  invalid_field_args.rs  invalid_variant_args.rs  missing_args.rs  missing_field_args.rs  missing_variant_args.rs  multiple_args.rs  skip_name.rs  skip_types.rs  test_only.rs  trailing_comma.rs
tests/assert/enums/: extra_field.rs  extra_field_feature.rs  extra_variant.rs  extra_variant_feature.rs  from.rs  generics.rs  incorrect_field.rs  incorrect_field_type.rs  incorrect_variant.rs  missing_field.rs  missing_field_feature.rs  missing_variant.rs  missing_variant_feature.rs  retain_attribute.rs  skip_field.rs  skip_field_type.rs  skip_types.rs  skip_variant.rs  valid.rs
tests/assert/structs/: extra_field.rs  extra_field_feature.rs  from.rs  generics.rs  incorrect_field.rs  incorrect_field_type.rs  missing_field.rs  missing_field_feature.rs  skip_field.rs  skip_field_type.rs  skip_types.rs  valid.rs
tests/assert/tuple_structs/: extra_field.rs  extra_field_feature.rs  from.rs  generics.rs  incorrect_field_type.rs  missing_field.rs  missing_field_feature.rs  skip_field.rs  skip_field_type.rs  skip_types.rs  valid.rs
tests/assert/unions/: error.rs
tests/assert/unit_structs/: from.rs  valid.rs
