[package]
name = "assert_type_match"
version = "0.1.0"
authors = ["Gino Valente <gino.valente.code@gmail.com>"]
description = "Statically assert that a type matches another type"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0"

[dev-dependencies]
ui_test = "0.26"

[[test]]
name = "assert"
harness = false