[package]
name = "assert_type_match"
version = "0.1.0"
edition = "2021"
authors = ["Gino Valente <gino.valente.code@gmail.com>"]
description = "Statically assert that a type matches another type"
repository = "https://github.com/MrGVSV/assert_type_match"
keywords = ["template", "proc_macro", "procmacro"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0"

[dev-dependencies]
ui_test = "0.26"

[[test]]
name = "assert"
harness = false